--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     },
     "dependencies": {
         "bootstrap-icons": "^1.0.0-alpha4",
-        "vue-router": "^3.3.2"
+        "bulma": "^0.8.2",
+        "vue-router": "^3.3.2",
+        "vuex": "^3.4.0"
     }
 }
