--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "vue-template-compiler": "^2.6.11"
     },
     "dependencies": {
+        "@creativebulma/bulma-collapsible": "^1.0.4",
         "bootstrap-icons": "^1.0.0-alpha4",
         "bulma": "^0.8.2",
         "vue-router": "^3.3.2",
