--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     },
     "dependencies": {
         "@creativebulma/bulma-collapsible": "^1.0.4",
+        "@fortawesome/fontawesome-free": "^5.13.0",
         "bootstrap-icons": "^1.0.0-alpha4",
         "bulma": "^0.8.2",
         "vue-router": "^3.3.2",
