--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "@creativebulma/bulma-collapsible": "^1.0.4",
         "@fortawesome/fontawesome-free": "^5.13.0",
         "bootstrap-icons": "^1.0.0-alpha4",
+        "buefy": "^0.8.20",
         "bulma": "^0.8.2",
         "vue-router": "^3.3.2",
         "vuex": "^3.4.0"
