--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "bootstrap-icons": "^1.0.0-alpha4",
         "buefy": "^0.8.20",
         "bulma": "^0.8.2",
+        "vue-moment": "^4.1.0",
         "vue-router": "^3.3.2",
         "vuex": "^3.4.0"
     }
